Layout issues

--- a/css/style.less
+++ b/css/style.less
@@ -25,9 +25,19 @@ body {
 	
 	margin: 0;
 	padding: 0;
+	font-size: 16px;
 	
 }
 
+@media only screen and (min-width: 40.063em) and (max-width: 64em) { 
+	
+	body {
+		
+		font-size: 13px;
+		
+	}
+	
+} 
 
 #backstory {
 	
@@ -264,6 +274,7 @@ body {
 		font-size: 2em;
 		margin: auto;
 		color: black;
+		padding-bottom: 2em;
 		
 	}
 	
@@ -300,8 +311,13 @@ body {
 	.row {
 		
 		overflow: hidden;
-		margin: 2em 5%;
-		margin-bottom: 3em;
+		margin: 1em 5%;
+		
+	}
+	
+	.row:last-child {
+		
+		margin-bottom: 2em;
 		
 	}
 		
